--- a/index.html
+++ b/index.html
@@ -26,34 +26,44 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav class="menu">
-        <a class="logo" href="./index.html"
-          ><span class="accent">Web</span>Studio</a
+    <header class="header">
+      <nav class="header-menu">
+        <a class="logo-link" href="./index.html"
+          >Web<span class="accent">Studio</span></a
         >
         <ul class="menu-list">
           <li class="menu-item">
-            <a href="Studio">Studio</a>
+            <a class="menu-link" href="Studio">Studio</a>
           </li>
           <li class="menu-item">
-            <a href="Portfolio">Portfolio</a>
+            <a class="menu-link" href="Portfolio">Portfolio</a>
           </li>
           <li class="menu-item">
-            <a href="Contacts">Contacts</a>
+            <a class="menu-link" href="Contacts">Contacts</a>
           </li>
         </ul>
       </nav>
       <address class="address">
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <ul class="address-list">
+          <li class="address-item">
+            <a class="address-link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="address-item">
+            <a class="address-link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
     <main>
       <section class="hero">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button class="hero-button" type="button">Order Service</button>
+        <button class="hero-button" target="_blank" type="button">
+          Order Service
+        </button>
       </section>
 
       <section class="features">
@@ -95,6 +105,7 @@
         <ul class="team-list">
           <li class="team-item">
             <img
+              class="team-pic"
               src="./images/img-3.jpg"
               width="264"
               height="260"
@@ -103,8 +114,9 @@
             <h3 class="team-subtitle">Mark Guerrero</h3>
             <p class="team-text">Product Designer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
+              class="team-pic"
               src="./images/img-2.jpg"
               width="264"
               height="260"
@@ -113,8 +125,9 @@
             <h3 class="team-subtitle">Tom Ford</h3>
             <p class="team-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
+              class="team-pic"
               src="./images/img-1.jpg"
               width="264"
               height="260"
@@ -123,8 +136,9 @@
             <h3 class="team-subtitle">Camila Garcia</h3>
             <p class="team-text">Marketing</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
+              class="team-pic"
               src="./images/img.jpg"
               width="264"
               height="260"
@@ -140,6 +154,7 @@
         <ul class="portfolio-list">
           <li class="portfolio-item">
             <img
+              class="portfolio-pic"
               src="./images/img-5.jpg"
               width="360"
               height="300"
@@ -150,6 +165,7 @@
           </li>
           <li class="portfolio-item">
             <img
+              class="portfolio-pic"
               src="./images/img-4.jpg"
               width="360"
               height="300"
@@ -160,6 +176,7 @@
           </li>
           <li class="portfolio-item">
             <img
+              class="portfolio-pic"
               src="./images/img-9.jpg"
               width="360"
               height="300"
@@ -170,6 +187,7 @@
           </li>
           <li class="portfolio-item">
             <img
+              class="portfolio-pic"
               src="./images/img-8.jpg"
               width="360"
               height="300"
@@ -180,6 +198,7 @@
           </li>
           <li class="portfolio-item">
             <img
+              class="portfolio-pic"
               src="./images/img-7.jpg"
               width="360"
               height="300"
@@ -190,6 +209,7 @@
           </li>
           <li class="portfolio-item">
             <img
+              class="portfolio-pic"
               src="./images/img-6.jpg"
               width="360"
               height="300"
