--- a/index.html
+++ b/index.html
@@ -14,13 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
@@ -29,17 +23,17 @@
     <header class="header">
       <nav class="header-menu">
         <a class="logo-link" href="./index.html"
-          >Web<span class="accent">Studio</span></a
+          >Web<span class="logo-accent">Studio</span></a
         >
         <ul class="menu-list">
           <li class="menu-item">
-            <a class="menu-link" href="Studio">Studio</a>
+            <a class="menu-link" href="./index.html">Studio</a>
           </li>
           <li class="menu-item">
-            <a class="menu-link" href="Portfolio">Portfolio</a>
+            <a class="menu-link" href="">Portfolio</a>
           </li>
           <li class="menu-item">
-            <a class="menu-link" href="Contacts">Contacts</a>
+            <a class="menu-link" href="s">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -61,9 +55,7 @@
     <main>
       <section class="hero">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button class="hero-button" target="_blank" type="button">
-          Order Service
-        </button>
+        <button class="hero-button" type="button">Order Service</button>
       </section>
 
       <section class="features">
