--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <a class="menu-link" href="">Portfolio</a>
           </li>
           <li class="menu-item">
-            <a class="menu-link" href="s">Contacts</a>
+            <a class="menu-link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -214,7 +214,9 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="logo" href="./index.html">WebStudio</a>
+      <a class="logo-link" href="./index.html"
+        >Web<span class="logo-accent">Studio</span></a
+      >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
