--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="logo-link" href="./index.html"
-        >Web<span class="logo-accent">Studio</span></a
+      <a class="foot-logo-link" href="./index.html"
+        >Web<span class="foot-logo-accent">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
